<resources>
    <string name="app_name">Feriapp</string>
    <string name="loguearse">Inicia Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="sinsesion">Continuar sin iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="introducirDatos">Rellene los siguientes campos:</string>
    <string name="crearUsuario">Crear usuario</string>
    <string name="dueño">Dueño de caseta</string>
    <string name="perfil">Perfil</string>
    <string name="filtrar">Filtrar</string>
    <string name="publica">Casetas Públicas</string>
    <string name="privada">Casetas Privadas</string>
    <string name="espacio">Casetas Con Aforo</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="cambiarImagen">Cambiar Imagen</string>
    <string name="EditarCampos">Editar</string>
    <string name="GuardarCambios">Guardar Cambios</string>
    <string name="casetaPublica">-- Pública</string>
    <string name="casetaPrivada">-- Privada</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="id">Id</string>
    <string name="tipoUsuario">TipoUsuario</string>
    <string name="contrasenia2">Contrasenia</string>
</resources>