<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itmPerfil"
        android:title="@string/perfil" />
    <item
        android:id="@+id/itmFiltrar"
        android:title="@string/filtrar">
        <menu>
            <item
                android:id="@+id/itmPublica"
                android:title="@string/publica" />
            <item
                android:id="@+id/itmPrivada"
                android:title="@string/privada" />
            <item
                android:id="@+id/itmEspacio"
                android:title="@string/espacio" />
        </menu>
    </item>
    <item
        android:id="@+id/itmCerrarSesion"
        android:title="@string/cerrarSesion" />
</menu>