<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.FeriappCrear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.CrearUsuario">

    <ImageView
        android:id="@+id/imgNuevaFotoPerfil"
        style="@style/FotoCrearUsuario"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gitana" />

    <EditText
        android:id="@+id/txtUsuarioRegistro"
        style="@style/UsuarioCrearUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRellenarCampos" />

    <TextView
        android:id="@+id/txtRellenarCampos"
        style="@style/rellenarCampos"
        android:layout_marginTop="28dp"
        android:text="@string/introducirDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNuevaFotoPerfil" />

    <EditText
        android:id="@+id/txtContraseniaRegistro"
        style="@style/ContraseñaCrearPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuarioRegistro" />

    <Button
        android:id="@+id/btnCrearUsuario"
        style="@style/botonCrearUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BD1414"
        android:textColor="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseniaRegistro" />

</androidx.constraintlayout.widget.ConstraintLayout>